--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,25 @@
 			</build>
 		</profile>
 	</profiles>
-
+	
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>4.3.11.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.8.10</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.10</version>
+		</dependency>
+	</dependencies>
+	
 	<distributionManagement>
 		<snapshotRepository>
 			<id>nexus-snapshots</id>
