--- a/src/test/resources/integration-test.properties
+++ b/src/test/resources/integration-test.properties
@@ -1,1 +1,2 @@
 CURRENCY_CONVERTER_SERVICE_URI=http://currency-converter-ms-blockchain-demo-dq03.3.10.158.121.xip.io
+BANK_API_SERVICE_URI=http://bank-ms-blockchain-demo-dq03.3.10.158.121.xip.io
