--- a/src/test/resources/integration-test.properties
+++ b/src/test/resources/integration-test.properties
@@ -1,7 +1,7 @@
 CURRENCY_CONVERTER_SERVICE_URI=http://currency-converter-ms.blockchain-demo-test.svc:8080
 BANK_API_SERVICE_URI=http://bank-ms.blockchain-demo-test.svc:8080
 GATEWAY_API_SERVICE_URI=http://blockchain-gateway-ms.blockchain-demo-test.svc:8080
-WALLET_MS_SERVICE_URI=wallet-ms.blockchain-demo-test.svc:8080
+WALLET_MS_SERVICE_URI=http://wallet-ms.blockchain-demo-test.svc:8080
 
 BANK_ADDRESS=0x63c14caced9e351ed8463e21d9bdee673b26fbbf
 
